src/test/ui/parser/bounds-lifetime.stderr
error: expected one of `>`, `const`, identifier, or lifetime, found `,`
  --> $DIR/bounds-lifetime.rs:9:14
   |
LL | type A = for<,> fn();
   |              ^ expected one of `>`, `const`, identifier, or lifetime here

error: aborting due to previous error

